Improvements to docker image build and usage
- Use Git hash as image tag by default
- Support custom image tags
- Merge custom configurations with defaults in the docker image
- Merge custom catalog and filesystem settings
- Add JVM options to respect docker memory settings
- Add entrypoint options to specify Java -Xmx heap size
- Move docker swarm deployment file to new samples folder
- Add sample k8s deployment file with README
- Add sample swarm deployment file with README
- Add script to gracefully shutdown hetu node
- Add log when node state changes

In kubernetes yml file:
- Use new jvmXmx parameter to specify Hetu memory limit

In Web UI:
- Change all absolute paths to relative ones

Quick fix of build-local: fetch project version by dep.hetu.version instead of project.version

Quick fix of run-hetu for kubernetes mounted files

Update base image to be configurable

Minor bug fixes