@@ -1,7 +1,8 @@
 -server
--Xmx1G
 -XX:-UseBiasedLocking
 -XX:+UseG1GC
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseCGroupMemoryLimitForHeap
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
